# async-web-scraper

./: .coveragerc  config.json  main.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
db/: connection.py  monitored_urls.py  schema.py
monitor/: checker.py
src/: main.py
src/db/: connection.py  monitored_urls.py  schema.py
src/monitor/: __init__.py  checker.py
src/utils/: config.py
tests/: conftest.py  test_connection.py
utils/: config.py  logger.py
