[project]
name = "async-web-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "certifi>=2025.10.5",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.2.10",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-postgresql>=7.0.2",
    "ipython>=9.6.0",
    "pyright>=1.1.406",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "asyncpg>=0.30.0",
]

[dependency-groups]
dev = ["ruff>=0.14.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
